# traceverdict

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: swebv_subset_v1.meta.json  swebv_subset_v1.txt  swebv_subset_v1_first12.txt
configs/: codex_shadow_prices.json  dev.yaml  kimi_k2_5_probe.yaml  litellm_models.json  litellm_models.meta.json  litellm_models_kimi.json  litellm_models_kimi.meta.json  litellm_models_mimo_v2.json  litellm_models_mimo_v2.meta.json  litellm_models_qwen.json  litellm_models_qwen.meta.json  litellm_models_qwen_v2.json  litellm_models_qwen_v2.meta.json  m3_deepseek_i3q_v1.yaml  m3_swe_agent_deepseek_v1.yaml  m3_swe_agent_deepseek_v2.yaml  m3_swe_agent_deepseek_v3.yaml  m3_swe_agent_deepseek_v4.yaml  m3_swe_agent_deepseek_v5.yaml  m3_swe_agent_deepseek_v6.yaml  m3_swe_agent_deepseek_v7.yaml  m4c_codex_gpt_5_6_luna_v1.yaml  m4c_codex_gpt_5_6_luna_v2.yaml  m4c_codex_gpt_5_6_sol_medium_v1.yaml  m4s_deepseek_v4_pro_v1.yaml  mimo_v2_5_probe_v3.yaml  qwen3_6_flash_probe.yaml  qwen3_6_flash_probe_v2.yaml  swe_agent_v1_1_0_source.json
docs/: PRD.md  daily_private_task_recipe.md  decisions.md  name_audit.md  publication_provenance.md
scripts/: analyze_m4d.py  build_history_tasks.py  check_cli_contract.py  check_links.py  check_public_safety.py  finalize_m3.py  finalize_m4c.py  m4c_prep.Dockerfile  recover_swebv_paid_run.py  run_m3.py  run_m4c.py  run_m4c_swebv.py  run_m4s.py  run_swebv_pilot.py  sample_swebv.py  sync_daily_resources.py
tests/: test_adapter_guards.py  test_cli.py  test_codex_adapter.py  test_compare_report.py  test_daily.py  test_daily_resources.py  test_docker_require.py  test_finalize_m3.py  test_history_tasks.py  test_ingest.py  test_injections.py  test_m3.py  test_m4c.py  test_m4c_finalizer.py  test_m4c_orchestrator.py  test_m4d.py  test_m4s.py  test_paid_run_recovery.py  test_public_safety.py  test_radar.py  test_runner_external_image.py  test_runner_wall_time.py  test_s1_task_load.py  test_sample_swebv.py  test_schema.py  test_selftest.py  test_snapshot.py  test_suite.py  (+6 more)
(+113 files in other folders)
