[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceverdict"
version = "0.1.0"
description = "Auditable state-regression evaluation for coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "typer",
    "pydantic",
    "docker",
    "litellm",
    "rich",
    "pytest",
    "GitPython",
]

[project.scripts]
traceverdict = "traceverdict.cli:app"

[project.urls]
Homepage = "https://github.com/weaqaq/traceverdict"
Repository = "https://github.com/weaqaq/traceverdict.git"
Issues = "https://github.com/weaqaq/traceverdict/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
traceverdict = ["tracer/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
