[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceverdict"
version = "0.2.1"
description = "Auditable state-regression evaluation for coding agents; published by the project owner"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer",
    "pydantic",
    "docker",
    "litellm==1.91.1",
    "rich",
    "pytest",
    "GitPython",
]

[project.scripts]
traceverdict = "traceverdict.cli:app"
tv = "traceverdict.cli:app"

[project.urls]
Homepage = "https://github.com/weaqaq/traceverdict"
Repository = "https://github.com/weaqaq/traceverdict.git"
Issues = "https://github.com/weaqaq/traceverdict/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
traceverdict = [
    "tracer/schema.sql",
    "resources/daily/configs/*",
    "resources/daily/tasks/self/*",
    "resources/daily/tasks/self/_image/*",
    "resources/daily/tasks/self/S*/*",
    "resources/daily/tasks/self/S*/verify/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
